--- a/crush/index.html
+++ b/crush/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Em có yêu anh nữaaa hongg👉👈</h2>
-        <h4 class="question-prompt">Nếu em không chọn hoặc thoát là em hết yêu anh r </h4>
+        <h2 class="question">Em có yêu anh hongg👉👈</h2>
+        <h4 class="question-prompt">Nếu em không chọn hoặc thoát là em đồng ý yêu anh </h4>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/PcCh9x9Pz5d2CriuMQ/giphy.gif"/>
         <div class="btn-group">
-            <button class="yes-btn">Không iu anh😠</button>
-            <button class="no-btn">có iuu anh😽</button>
+            <button class="yes-btn">Iu anh😠</button>
+            <button class="no-btn">Không iu anh😽</button>
         </div>
     </div>
     <script src="script.js">
