--- a/crush/index.html
+++ b/crush/index.html
@@ -12,7 +12,7 @@
         <h4 class="question-prompt">Nếu em không chọn hoặc thoát là em đồng ý yêu anh </h4>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/PcCh9x9Pz5d2CriuMQ/giphy.gif"/>
         <div class="btn-group">
-            <button class="yes-btn">Iu anh😠</button>
+            <button class="yes-btn">Iu anh❤</button>
             <button class="no-btn">Không iu anh😽</button>
         </div>
     </div>
